fixed tpm issue

--- a/etc/init/tpm-emulator.conf
+++ b/etc/init/tpm-emulator.conf
@@ -12,7 +12,7 @@ stop on stopped boot-services
 # is emitted these code have finished running, not just started running.
 pre-start script
   # Start only if there is no physical TPM device(or it is not support by the kernel)
-  tpmd_store_dir="/var/lib/vtpm"
+  tpmd_store_dir="/var/lib/tpm"
   if ! test -e /sys/class/misc/tpm0 -o -e /sys/class/tpm/tpm0 ; then
     logger -t "$UPSTART_JOB" "tpm is non-functional or tpm driver is missing."
     logger -t "$UPSTART_JOB" "starting tpm-emulator"
